--- a/Adriele Seibert (books)/index.html
+++ b/Adriele Seibert (books)/index.html
@@ -3,19 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device=width, initial-scale=1.0">
-    <link rel="styleesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AluraBooks</title>
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="reset.css">
 </head>
+
 <body>
-    <header class="cabecalho">
-            <div class="container">
-                <span class="cabecalho-menu-hamburguer"> </span>
-
-            </div>
-
-    </header>
+    <h1>Alurabook</h1>
 
 </body>
-</html>
 
+</html>
