--- a/Adriele Seibert (books)/index.html
+++ b/Adriele Seibert (books)/index.html
@@ -86,19 +86,15 @@
                 <img src="img/Angular.png" class="descrição__imagem">
             </div>
 
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script>
-        const swiper = new Swiper('.swiper', {
-              spaceBetween: 10,
-              slidesPerView: 3,
-              pagination: {
-                    el: '.swiper-pagination',
-                    type: 'bullets',
-                },
-        });
-    </script>
+            <div class="card__botões">
+                <ul class="botões">
+                    <li class="botões__item"><img src="img/favoritos.svg"></li>
+                    <li class="botões__item"><img src="img/compras.svg"></li>
+                </ul>
+                
+                <a href="#" class="botões__ancora">Saiba mais</a>
+            </div>
+        </div>
+    </section>        
 
-</body>
-
-</html>
+   
